[tool.poetry]
name = "latex-png"
version = "0.1.0"
description = ""
authors = ["timelesnesses <timelessnesses@timelessnesses.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.9.0"
uvicorn = "^0.30.0"
fastapi = "^0.111.0"
logfire = "^0.36.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
